# smart_pointers

shared_pointer/: CMakeLists.txt
shared_pointer/include/: dogtoy.h  shared_ptr_toy.h
shared_pointer/src/: CMakeLists.txt  main.cpp  shared_ptr_toy.cpp  template.cpp
